[package]
name = "server"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
ahash.workspace = true
camino = { workspace = true }
chrono.workspace = true
clap = { workspace = true, optional = true }
crossbeam-channel = "0.5.13"
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
parser = { workspace = true }
regex.workspace = true
reqwest = { workspace = true }
rustc-hash = { workspace = true }
schema-store = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_tombi = { workspace = true }
syntax.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true }
tombi-ast = { workspace = true }
tombi-config = { workspace = true }
tombi-diagnostic = { workspace = true }
tombi-document = { workspace = true }
tombi-document-tree = { workspace = true }
tombi-formatter = { workspace = true }
tombi-linter = { workspace = true }
tombi-text = { workspace = true }
tower-lsp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator.workspace = true
x-tombi.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tempfile = { version = "3.15.0" }
test-lib = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[features]
clap = ["dep:clap"]
default = ["clap"]
