[package]
name = "text"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
lsp = ["dep:tower-lsp"]

[dependencies]
serde = { workspace = true, optional = true }
tower-lsp = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
