[package]
name = "tombi-ast-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
parser = { workspace = true }
regex = { workspace = true }
schema-store = { workspace = true }
syntax = { workspace = true }
thiserror = { workspace = true }
tombi-ast = { workspace = true }
tombi-document-tree = { workspace = true }
tombi-text = { workspace = true }
tombi-toml-version = { workspace = true }
tombi-x-keyword = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
