[package]
name = "tombi-ast-editor"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
regex.workspace = true
thiserror.workspace = true
tombi-ast.workspace = true
tombi-document-tree.workspace = true
tombi-future.workspace = true
tombi-parser.workspace = true
tombi-schema-store.workspace = true
tombi-syntax.workspace = true
tombi-text.workspace = true
tombi-toml-version.workspace = true
tombi-validator.workspace = true
tombi-version-sort.workspace = true
tombi-x-keyword.workspace = true
tracing.workspace = true
