[package]
name = "tombi-ast"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
itertools = { workspace = true }
syntax = { workspace = true }
thiserror = { workspace = true }
tombi-text = { workspace = true }
tombi-toml-text = { workspace = true }
toml-version = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
