[package]
name = "tombi-config"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tombi-toml-version.workspace = true
tombi-url.workspace = true
tombi-x-keyword.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
clap = ["dep:clap"]
default = ["clap", "serde"]
jsonschema = ["dep:schemars", "serde", "tombi-toml-version/jsonschema"]
serde = ["dep:serde"]
