[package]
name = "tombi-date-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
chrono = ["dep:chrono", "serde"]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
serde_json.workspace = true
