[package]
name = "tombi-date-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
serde_json.workspace = true

[features]
chrono = ["dep:chrono"]
default = ["chrono", "serde"]
serde = ["dep:serde"]
