[package]
name = "tombi-document-tree"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
tombi-ast = { workspace = true }
tombi-date-time = { workspace = true }
tombi-diagnostic = { workspace = true, optional = true }
tombi-text = { workspace = true }
toml-text = { workspace = true }
toml-version = { workspace = true }
tracing = { workspace = true }

[features]
default = ["diagnostic"]
diagnostic = ["dep:tombi-diagnostic"]
